--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+    "parser": "@typescript-eslint/parser",
     "plugins": ["@typescript-eslint"],
     "extends": [
         "react-app",
@@ -6,6 +7,7 @@
         "plugin:prettier/recommended"
     ],
     "rules": {
-        "prettier/prettier": "error"
+        "prettier/prettier": "error",
+        "@typescript-eslint/explicit-function-return-type": 0
     }
 }
