--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "eject": "react-scripts eject"
     },
     "dependencies": {
+        "axios": "^0.19.0",
+        "camelcase-keys": "^6.0.1",
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
         "react-scripts": "3.1.2",
