--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
         "react-redux": "^7.1.1",
+        "react-router-dom": "^5.0.1",
         "react-scripts": "3.1.2",
         "redux": "^4.0.4",
         "typescript": "3.6.3"
@@ -24,6 +25,7 @@
         "@types/react": "^16.9.2",
         "@types/react-dom": "16.9.0",
         "@types/react-redux": "^7.1.2",
+        "@types/react-router-dom": "^4.3.5",
         "@typescript-eslint/eslint-plugin": "^2.3.0",
         "@typescript-eslint/parser": "^2.3.0",
         "eslint-config-prettier": "^6.3.0",
