--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "lint": "eslint src/**/*.{ts,tsx}"
     },
     "dependencies": {
         "axios": "^0.19.0",
@@ -28,6 +29,7 @@
         "@types/react-router-dom": "^4.3.5",
         "@typescript-eslint/eslint-plugin": "^2.3.0",
         "@typescript-eslint/parser": "^2.3.0",
+        "eslint": "^6.4.0",
         "eslint-config-prettier": "^6.3.0",
         "eslint-config-react": "^1.1.7",
         "eslint-plugin-prettier": "^3.1.1",
